kuber/kuber-08/task2/deploy2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy2
  labels:
    app: deploy2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy2
  template:
    metadata:
      labels:
        app: deploy2
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
          - containerPort: 80
        volumeMounts:
          - name: config2
            mountPath: "/usr/share/nginx/html/"

      volumes:
      - name: config2
        configMap:
          name: confmap2
