kuber/kuber-08/task2/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  selector:
    app: deploy2
  ports:
    - name: nginx-service-port
      protocol: TCP
      port: 82
      targetPort: 80
