kuber/kuber-08/task2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: netology-example.com
    http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: service2
              port:
                number: 82
          path: /
  tls:
  - hosts:
      - netology-example.com
    secretName: secret-tls
